# nexus_crm_links

./: .env.docker-compose  .env.docker-compose.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: entrypoint.sh
nexus_crm/: .dockerignore  manage.py
nexus_crm/clients/: admin.py  forms.py  models.py  urls.py  views.py
nexus_crm/clients/migrations/: 0001_initial.py  0002_alter_clients_phone_alter_clients_phone_2.py
nexus_crm/nexus_crm/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
nexus_crm/orders/: admin.py  forms.py  manager.py  models.py  urls.py  views.py
nexus_crm/orders/migrations/: 0001_initial.py  0002_alter_orders_table.py  0002_orders_client_alter_orders_manager_and_more.py  0003_orderfile.py  0003_service_orders_service.py  0004_alter_orderfile_options_alter_orderfile_table.py  0005_ordercase.py  0006_ordercase_cost.py  0007_alter_orders_cost_price_alter_orders_total_price.py
nexus_crm/static/crm/css/: index.css  (+2 more)
nexus_crm/templates/base/: base.html  dashboard.html
nexus_crm/templates/emails/: link_to_reset_password_message.html  password_reset_message.txt  password_reset_subject.txt  welcome_message.html  welcome_message.txt  welcome_subject.txt
nexus_crm/templates/includes/: client_add_form.html  edit_order_address.html  navbar.html  service_add_form.html
nexus_crm/templates/orders/: order_blank.html  order_card.html  order_files.html
nexus_crm/users/: forms.py  manager.py  models.py  tasks.py  urls.py  utils.py  views.py
nginx/: Dockerfile  nexus_app.conf
tests/: conftest.py
(+16 files in other folders)
